Fixed spacing around pingbacks not being styled the same as comments

--- a/scss/07-comments/02-comments.scss
+++ b/scss/07-comments/02-comments.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.comment + .comment {
+.comment-list > * + * {
   margin-block-start: 2em;
   border-top: var(--border-width) dashed var(--color-brown);
   padding-block-start: 2em;
